--- a/src/style.css
+++ b/src/style.css
@@ -2,5 +2,5 @@ h1 {
   font-family: "Poiret One", cursive;
 }
 body {
-  background-image: url("bg3.webp");
+  background-image: url("../bg3.webp");
 }
